group '1'
version '1.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'idea'

sourceCompatibility = 1.8

dependencies {
    compile group: 'com.google.guava',  name: 'guava', version: '19.0'
    compile group: 'commons-lang', name: 'commons-lang', version: '2.0'
}

repositories {
    mavenCentral()
}

dependencies {
    compile group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2'
    testCompile group: 'junit', name: 'junit', version: '4.12'
}

//task copyDepJars(type: Copy) {
//    from configurations.compile
//    into 'C:\\Users\\athakur\\Desktop\\lib'
//}
